@@ -2331,7 +2331,7 @@ test(860, DT[i], DT[data.table(i)])
 before = gc()["Vcells","(Mb)"]
 for (i in 1:2000) { DT = data.table(1:3); rm(DT) }  # in 1.8.2 would leak 3MB
 after = gc()["Vcells","(Mb)"]
-test(861, after < before+0.5)
+test(861, after < before+0.5)   # close to 0.0 difference, but 0.5 for safe margin
 
 before = gc()["Vcells","(Mb)"]
 DF = data.frame(x=1:20, y=runif(20))
@@ -2344,6 +2344,9 @@ DT = data.table(x=1:20, y=runif(20))
 for (i in 1:2000) { x <- DT[1:5,]; rm(x) }
 after = gc()["Vcells","(Mb)"]
 test(863, after < before+0.5)
+
+# rbindlist should look for the first non-empty data.table
+test(864, rbindlist(list(data.table(foo=logical(0),bar=logical(0)), DT<-data.table(baz=letters[1:3],qux=4:6))), DT)
 
 
 # TO DO:
